--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     npm install
 
+    GIT: https://github.com/DanielOliveiraMatias/Ag-12
+    VÍDEO_GUIA: https://etecspgov-my.sharepoint.com/:v:/r/personal/daniel_matias_etec_sp_gov_br/Documents/INSTALLATIONGUIDE.mp4?csf=1&web=1&nav=eyJyZWZlcnJhbEluZm8iOnsicmVmZXJyYWxBcHAiOiJPbmVEcml2ZUZvckJ1c2luZXNzIiwicmVmZXJyYWxBcHBQbGF0Zm9ybSI6IldlYiIsInJlZmVycmFsTW9kZSI6InZpZXciLCJyZWZlcnJhbFZpZXciOiJNeUZpbGVzTGlua0NvcHkifX0&e=A5cJSs
+    
 -->
     
 <head>
